# localization-tutorial

./: .gitignore  .pre-commit-config.yaml  Manifest.toml  Project.toml  README.md  TODO.md  black-box.jl  black_box.jl  drawit.jl  example_20_program.json  goals.json  probcomp-localization-tutorial.jl  pyproject.toml  saved-mh.jl  slides-workspace.jl  world.json  world_coarse.json
animate/: plotting.jl  port.jl  test.ipynb  world.jl
genjax/: probcomp-localization-tutorial.py  pyproject.toml
genjax-localization-tutorial/: README.md  probcomp-localization-tutorial.ipynb  probcomp-localization-tutorial.py  pyproject.toml  rescue.ipynb  robot-2.py  scratch.py
genjax-localization-tutorial/studio/: .gitignore  package.json  pyproject.toml
genjax-localization-tutorial/studio/src/js/: histogram.jsx
genjax-localization-tutorial/studio/src/python/: __init__.py
genjax/studio/: README.md
genjax/studio/src/js/: tdb.js
genjax/studio/src/python/: repl.py  studio.py
mapping tutorial/: mapping-tutorial.ipynb
mapping-tutorial/: mapping-tutorial.py
python/: tutorial.py
robot_2/: bench.py  emoji.py  reality.py  robot.py  test_reality.py  test_where_am_i.py  visualization.py  where_am_i.py
scripts/: bootstrap-env.sh
spring2025-course/: localization-tutorial.ipynb  localization-tutorial.py
