[project]
authors = [{name = "Aaron Steele", email = "eightysteele@gmail.com"}]
name = "localization-tutorial"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "genjax==0.9.1", "jax>=0.4.38,<0.5", "genstudio==2025.2.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
localization_tutorial = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupytext = ">=1.16.7,<2"
ipykernel = ">=6.29.5,<7"
ipython = ">=8.32.0,<9"
numpy = "<2.0.0"
