[project]
authors = [{name = "Aaron Steele", email = "eightysteele@gmail.com"}]
name = "localization-tutorial"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "jax[cuda12-local]==0.4.35", "genstudio>=2025.2.2,<2026", "genjax==0.9.1", "jupyter-server>=2.15.0,<3", "jupyterlab>=4.3.5,<5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.project]
channels = ["conda-forge"]

#FIXME: add pixi autodetect for platforms ; osx (local laptop dev)
#       commented out in favor of linux (gcp) for VKM crash dev on 
#       2025-02-16
#platfoms = ["osx-arm64"]

platforms = ["linux-64"]
#conda-pypi-map = { "conda-forge" = "parselmouth.json" }


[tool.pixi.activation.env]
XLA_PYTHON_CLIENT_PREALLOCATE = "false"
XLA_PYTHON_CLIENT_ALLOCATOR = "platform"


[tool.pixi.pypi-dependencies]
localization_tutorial = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupytext = ">=1.16.7,<2"
ipykernel = ">=6.29.5,<7"
ipython = ">=8.32.0,<9"
numpy = "<2.0.0"
cudnn = ">=9.7.1.26,<10"
