[tool.poetry]
name = "genjax-localization-tutorial"
version = "0.1.0"
description = ""
authors = ["Matthew Huebert <mhuebert@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupytext = "^1.16.1"
genjax = {version = "^0.10.0" }
genstudio = {version = "2025.2.2" }

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["genjax-localization-tutorial"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
