[tool.poetry]
name = "opengen-studio"
version = "0.1.0"
description = "Visualization tools for OpenGen"
authors = ["Matthew Huebert <mhuebert@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/python"}]

[tool.poetry.dependencies]
python = "^3.12"
anywidget = "^0.9.7"

[tool.poetry.group.dev.dependencies]
jupytext = "^1.16.1"
ipykernel = "^6.29.4"
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
